--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
 
     }
     dependencies {
